Fix highlight's incorrect top border on collapse

--- a/themes/maik-blog/assets/scss/_collapsible-block.scss
+++ b/themes/maik-blog/assets/scss/_collapsible-block.scss
@@ -33,6 +33,8 @@
 
             .highlight {
                 margin: 0 -1em;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
 
                 &:first-child {
                     margin-top: -1em;
